--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -5,14 +5,13 @@
     <title>@ViewData["Title"]</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Velkommen til min hjemmeside! Mit navn er Jasper, og jeg er en teknologi-entusiast med særlig interesse for cybersikkerhed. Du kan udforske mine projekter på GitHub og netværke med mig på LinkedIn. Desuden er jeg en del af Z3R0D4Y, der er et CTF hold, hvor vi udfordrer os selv med spændende cybersikkerhedsopgaver.">
+    <meta name="description" content="Velkommen til min hjemmeside! Jeg hedder Magnus, og jeg har en passion for alt inden for IT-verdenen. Jeg elsker at dykke ned i forskellige teknologier og eksperimentere med nye ideer.">
     <meta name="theme-color" content="#20C20E">
-    <meta property="og:title" content="Jazper.dk" />
+    <meta property="og:title" content="MT-Integrations.dk" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jazper.dk" />
+    <meta property="og:url" content="https://mt-integrations.dk" />
     <meta property="og:image" content="~/media/images/pfp-icons.png" />
-    <meta property="og:description" content="Velkommen til min hjemmeside! Mit navn er Jasper, og jeg er en teknologi-entusiast med særlig interesse for cybersikkerhed. Du kan udforske mine projekter på GitHub og netværke med mig på LinkedIn. Desuden er jeg en del af Z3R0D4Y, der er et CTF hold, hvor vi udfordrer os selv med spændende cybersikkerhedsopgaver." />
-    <meta name="keywords" content="Jasper, Jazper, JC Integrations, Jasper Christiansen, Discord, Guildy">
+    <meta property="og:description" content="Velkommen til min hjemmeside! Jeg hedder Magnus, og jeg har en passion for alt inden for IT-verdenen. Jeg elsker at dykke ned i forskellige teknologier og eksperimentere med nye ideer." />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <script src="~/js/typewriter.js" defer></script>
 </head>
