--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model JazperDK.Models.Social[]
 @{
-    ViewData["Title"] = "Jazper";
+    ViewData["Title"] = "Magnus";
 }
 
 <div class="particles-js" id="particles-js"></div>
 
 <header>
-    <h1>JAZPER</h1>
+    <h1>MAGNUS T</h1>
 </header>
 
 <main id="social-buttons">
