--- a/src/Views/Portfolio/Index.cshtml
+++ b/src/Views/Portfolio/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model JazperDK.Models.PortfolioItem[]
 @{
-    ViewData["Title"] = "Jazper | Portfolio";
+    ViewData["Title"] = "Magnus | Portfolio";
 }
 
 <div class="particles-js" id="particles-js"></div>
